[package]
name = "watfaq-tun"
version = "0.1.0"
edition = "2021"

[dependencies]

# common deps
tracing = { version = "0.1", default-features = false, features = ["std"] }
libc = "0.2"
socket2 = "0.5.6"
bytes = "1.6.0"

# net route, core logics
net-route = { git = "https://github.com/VendettaReborn/net-route.git", rev = "48496209548dcd53bb9e6f312c56a57c01de71c2"}

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-sock-diag = "0.4.2"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = {version = "0.52",features = ["Win32_Foundation","Win32_NetworkManagement_IpHelper","Win32_NetworkManagement_Ndis","Win32_Networking_WinSock","Win32_System_IO"]}
winapi = { version = "0.3"}

